--- a/copy.yml
+++ b/copy.yml
@@ -4,17 +4,13 @@
   tasks:
     - name: Install packages
       apt:
-        name: apache2
+        name: httpd
         state: present
     - name: Start Apache server
       service:
-        name: apache2
+        name: httpd
         state: started
-    - name: Add firewall rules
-      ufw:
-        rule: allow
-        port: 80
-        proto: tcp
+
     - name: Deploy static website
       copy:
         src: index.html
