--- a/copy.yml
+++ b/copy.yml
@@ -13,5 +13,5 @@
     - name: Deploy static website
       copy:
         src: index.html
-        dest: /var/www/html/
+        dest: /var/www/html
 ...
